<resources>
    <string name="app_name">Android-article-webtask</string>
    <string name="action_settings">Settings</string>
    <string name="author">Author:</string>
    <string name="author_name">Author name</string>
    <string name="article_title">Article Title</string>
    <string name="article_thumburl">Article Thumburl</string>
    <string name="article_content">Article Content</string>
    <string name="add">ADD</string>
    <string name="save">Save</string>
</resources>
